# redact

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  README.md  README.zh-CN.md  SECURITY.md  THREAT-MODEL.md
.github/workflows/: ci.yml  release.yml
crates/common/: Cargo.toml
crates/common/benches/: redactor_bench.rs
crates/common/src/: config.rs  error.rs  harness.rs  lib.rs  patterns.rs  redactor.rs  stats.rs
crates/common/tests/: latency.rs
crates/gate/: Cargo.toml
crates/gate/src/: allowlist.rs  color.rs  command.rs  config_cmd.rs  enable_disable.rs  hook.rs  init.rs  init_opencode.rs  list.rs  main.rs  protect.rs  retro.rs  run.rs  scan.rs  starter.rs  uninstall.rs  validate.rs
crates/gate/tests/: latency.rs  mcp_integration.rs  run_integration.rs
crates/gate1/: Cargo.toml
crates/gate1/src/: lib.rs  tokenizer.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: intercept.rs  lib.rs  transport.rs
crates/mcp/tests/: intercept.rs
crates/redact/: Cargo.toml
crates/redact/src/: command.rs  config_cmd.rs  enable_disable.rs  hook.rs  init.rs  list.rs  main.rs  redactor.rs  run.rs  starter.rs  validate.rs
crates/redact/tests/: run_integration.rs
dev/: README.md  api-server  config.yaml  docker-compose.yml  mcp_server.py  psql-json  requirements.txt  seed.sql  seed_mysql.sql  setup.sh
docs/: commands.md  config-locations.md  configuration.md  mcp.md  plan.md  scan.md  troubleshooting.md
