[package]
name = "gate"
version = "0.3.2"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
common = { path = "../common" }
gate1 = { path = "../gate1" }

[dev-dependencies]
tempfile = { workspace = true }
