[package]
name = "gate"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
common = { path = "../common" }
gate1 = { path = "../gate1" }
mcp = { path = "../mcp" }

[dev-dependencies]
tempfile = { workspace = true }
