[package]
name = "gate"
version = "0.8.5"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shell-words = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
common = { path = "../common" }
gate1 = { path = "../gate1" }
mcp = { path = "../mcp" }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
